# TritonNano

./: CMakeLists.txt  main.c
nanopb-0.4.4-linux-x86/generator/: protoc.spec
nanopb-0.4.4-linux-x86/generator-bin/: protoc  protoc-gen-nanopb
nanopb-0.4.4-linux-x86/generator-bin/lib/python3.5/config-3.5m-x86_64-linux-gnu/: Makefile
proto/: NanoCmdAPI.proto
